description/part2/3. ALB Ingress Controller/alb-svc-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
