description/part2/3. ALB Ingress Controller/alb-svc-console.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: console
  name: console
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: nginx
  sessionAffinity: None
  type: NodePort
