description/part2/3. ALB Ingress Controller/alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
  labels:
    app.kubernetes.io/name: wonder-mz-alb-ingress
  name: wonder-mz-ingress
spec:
  rules:
    - host: console.wondermz.com
      http:
        paths:
          - backend:
              serviceName: console
              servicePort: 80
            path: /*
    - host: api.wondermz.com
      http:
        paths:
          - backend:
              serviceName: api
              servicePort: 80
            path: /*
    - http:
        paths:
          - backend:
              serviceName: console
              servicePort: 80
            path: /*
